# smart-meeting-api

./: .env.diarization  .gitignore  Dockerfile  Makefile  README.md  README_DIARIZATION.md  SETUP.md  debug_transcription_flow.py  docker-compose.yml  pyproject.toml  test_async_transcription.py  test_diarization_quick.py
app/: __init__.py  main.py
app/api/: routes.py
app/api/endpoints/: meetings.py  transcriptions.py
app/core/: ai_config.py  config.py  events.py  startup.py
app/db/: __init__.py  client.py
app/models/: __init__.py
app/schemas/: meeting.py  progress.py  transcription.py  tts.py
app/services/: background_tasks.py  enhanced_summary_service.py  enhanced_transcription_service.py  faster_whisper_service.py  meeting_analysis_service.py  meeting_service.py  progress_service.py  speaker_diarization_service.py  transcription_service.py  tts_service.py
prisma/: schema.prisma
scripts/: init_db.py  install_diarization.py  quick_commands.sh  setup_ai_models.py  test_ai_analysis.py
tests/: __init__.py  test_main.py
